# pet_project_what_is_trino

./: .gitignore  LICENSE  README.md  pyproject.toml
00_the_theory_of_trino/: 01_what_is_tirno.md  02_what_is_trino_cluster.md  03_subtleties_of_the_trino.md  readme.md
01_simple_trino_setup/: readme.md
02_simple_trino_setup_with_configuration/: docker-compose.yaml  readme.md
03_simple_trino_with_connector/: readme.md
04_simple_trino_cluster/: docker-compose.yaml  readme.md
04_simple_trino_cluster/coordinator/etc/: node.properties
04_simple_trino_cluster/worker-1/etc/: node.properties
04_simple_trino_cluster/worker-2/etc/: node.properties
05_simple_federated_query/: docker-compose.yaml  readme.md
06_integration_of_trino_into_de_python/: docker-compose.yaml  readme.md  simple_trino_dbapi_dml_query.py  simple_trino_dbapi_query.py  simple_trino_dbapi_select_query.py  simple_trino_sqlalchemy_dml_query.py  simple_trino_sqlalchemy_select_query.py
07_integration_of_trino_into_de_kafka/: docker-compose.yaml  readme.md  simple_producer.py
08_integration_of_trino_into_de_apache_iceberg/: docker-compose.yaml  readme.md
08_integration_of_trino_into_de_apache_iceberg/etc/: node.properties
09_integration_of_trino_into_de_apache_airflow/: Dockerfile  readme.md
09_integration_of_trino_into_de_apache_airflow/dags/: simple_trino_example_dag.py
09_integration_of_trino_into_de_apache_airflow/handles/: create_connection.py
10_integration_of_trino_into_de_apache_superset/: docker-compose.yaml  readme.md
(+3 files in other folders)
