[project]
name = "pet-project-what-is-trino"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pandas==2.2.3",
    "pendulum==3.2.0",
    "sqlalchemy==2.0.46",
    "trino==0.336.0",
    "confluent-kafka==2.13.2",
    "Faker==40.5.1"
]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = [
    "ANN",
    "B",
    "BLE",
    "E",
    "F",
    "I",
    "N801",
    "N802",
    "N803",
    "N815",
    "N816",
    "RUF",
    "SIM",
    "UP",
    "PD",
    "NPY"
]
ignore = [
    "ANN002",
    "ANN003",
    "ANN401",
    "B009",
    "B904",
    "F821",
    "RUF001",
    "RUF002",
    "RUF003",
    "SIM117",
    "SIM118",
    "PD901",
    "BLE001"
]

[tool.ruff.lint.isort]
order-by-type = false
case-sensitive = true

[tool.ruff.format]
quote-style = "double"